# llm-lora-finetuning

./: .clinerules  .cursorrules  .env.example  .gitignore  .windsurfrules  CLAUDE.md  LICENSE  README.md  model_card.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
assets/: architecture.drawio
configs/: training_config.yaml  training_config_t4.yaml
notebooks/: 00_free_tier_quickstart.ipynb  01_exploration_and_training.ipynb
scripts/: evaluate.sh  train.sh
src/data/: prepare_dataset.py  prompt_templates.py
src/evaluate/: __init__.py  compare_models.py  evaluate_model.py
src/inference/: __init__.py  predict.py  serve.py
src/train/: __init__.py  callbacks.py  finetune_lora.py
tests/: test_data_pipeline.py
